<resources>
    <string name="app_name" translatable="false">Locator via SMS</string>
    <string name="title_activity_main" translatable="false">Locator via SMS</string>
    <string name="settings">Settings</string>
    <string name="phones">Phones</string>
    <string name="phrases">Phrases</string>

    <string name="use_gps">Use GPS</string>
    <string name="use_gps_summary">More accurate positioning</string>
    <string name="gps_timeout">GPS search duration</string>
    <string name="location_timeout">Location search duration</string>
    <string name="use_remote_network_location">Use remote network location</string>
    <string name="use_remote_network_location_summary">Location w/o enable geolocation. Encodes data about networks around and send it. This data will be decoded on receiver.</string>

    <string name="phones_description_white">Phones that can receive your location</string>
    <string name="phones_description_black">Phones that can not receive your location</string>
    <string name="phone_dialog_title">Phone</string>
    <string name="phone_dialog_message_white">Enter the phone that can request  your location:</string>
    <string name="phone_dialog_message_black">Enter the phone that can not request your location:</string>

    <string name="phrases_description">SMS that will activate the application</string>
    <string name="phrase_dialog_title">Message text</string>
    <string name="phrase_dialog_message">Enter the SMS text that will activate the app:</string>
    <string name="delete">Delete</string>
    <string name="dialog_permissions_title">Permissions</string>
    <string name="dialog_permissions_message">This application needs permissions for location and SMS.</string>
    <string name="grant">Grant</string>
    <string name="sms_no_permissions">No permissions</string>
    <string name="sms_location_not_found">Unable to locate position</string>
    <string name="demo_message">Demo message</string>
    <string name="demo_message_summary">Displays a message that is now can be formed</string>
    <string name="demo_wait_gps">Waiting for GPS...</string>
    <string name="demo_wait_location">Waiting for network location...</string>
    <string name="demo_last_location">Receiving last location...</string>
    <string name="via_gps">via GPS</string>
    <string name="via_network">via network</string>
    <string name="location_accuracy_format" formatted="false">accuracy: %dm</string>
    <string name="location_movement_format" formatted="false">moves to %d by %dm/s</string>
    <string name="location_altitude_format" formatted="false">altitude: %dm</string>
    <string name="location_battery_level_format" formatted="false">battery: %d%%</string>
    <string name="few_days_ago">received a few days ago</string>
    <string name="day_ago">received a day ago</string>
    <string name="some_ago_format" formatted="false">received %d:%02d ago</string>
    <string name="share">Share</string>
    <string name="message_formatting">Message formatting</string>
    <string name="write_source">Write source</string>
    <string name="write_source_summary">via GPS or via network</string>
    <string name="write_time">Write receive time</string>
    <string name="write_time_summary">How long has obtained location</string>
    <string name="write_accuracy">Write accuracy</string>
    <string name="write_accuracy_summary">Location accuracy in meters</string>
    <string name="write_movement">Write movement</string>
    <string name="write_movement_summary">Movement direction in degrees and speed in meters per second</string>
    <string name="write_altitude">Write altitude</string>
    <string name="write_altitude_summary">Height in meters if available</string>
    <string name="write_battery_level">Write battery level</string>
    <string name="write_battery_level_summary">Percentage of battery charge level</string>

    <string name="location">Location</string>
    <string name="blacklist">To blacklist</string>
    <string name="whitelist">To whitelist</string>
    <string name="grant_access_to_read_contacts">Grant access to read contacts</string>
    <string name="choose_contact">Choose contact</string>

    <string name="broadcast">Location broadcast</string>
    <string name="broadcast_enabled">Location broadcast is enabled</string>
    <string name="broadcast_next" formatted="false">Next in %d:%02d</string>
    <string name="broadcast_start">Start</string>
    <string name="broadcast_stop">Stop</string>
    <string name="broadcast_cant_start">Specify interval and at least one phone before start</string>
    <string name="broadcast_interval">Interval</string>
    <string name="broadcast_interval_summary" formatted="false">Every %s</string>
    <string name="broadcast_comment">Comment</string>
    <string name="broadcast_phones">Phones</string>
    <string name="phone_dialog_message_broadcast">Enter the phone number to which your location will be sent:</string>

    <string name="send_service_crash">SMS send service has unexpectedly stopped.\nClick here to send report.</string>
    <string name="show_and_send_crash_report">Show and send</string>

    <plurals name="hours">
        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <string name="notification_no_permission">Can\'t send SMS because permission to send sms is not granted</string>

</resources>
