<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/top_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent">
            <FrameLayout
                android:id="@+id/change_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
                <Button
                    android:id="@+id/change_to_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist"
                    android:theme="@style/AppTheme.Dark" />
                <Button
                    android:id="@+id/change_to_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whitelist"
                    android:theme="@style/AppTheme.Light" />
            </FrameLayout>
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/change_to"
                android:text="@string/phones_description_white"
                android:textColor="@color/colorAccentText" />
        </RelativeLayout>

        <Button
            android:id="@+id/grant_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/grant_access_to_read_contacts" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_panel"
            android:layout_above="@id/grant_panel">
            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_add" />
        </FrameLayout>
    </RelativeLayout>
</FrameLayout>